# metf-python-client

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README  README.md  build.py  pyproject.toml  requirements_dev.txt  setup.py
metf_python_client/: __init__.py  _version.py  core.py  logger.py  utils.py
metf_python_client/boards/: esp32c6_super_mini.py  nodemcu.py  wemos.py
metf_python_client/examples/: 01-Blynk.py  02-CheckButton.py  03-BlynkUnitTest.py  04-ButtonUnitTest.py  05-i2c.py  06-RGBLed.py
