[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metf-python-client"
version = "0.2"
description = "HTTP client library for testing hardware using ESP boards (NodeMCU, WeMos, ESP32C6)"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Evgeny Dontsov", email = "don-and-home@mail.ru"}
]
maintainers = [
    {name = "Evgeny Dontsov", email = "don-and-home@mail.ru"}
]
keywords = [
    "esp8266",
    "esp32",
    "nodemcu",
    "wemos",
    "hardware testing",
    "iot",
    "embedded",
    "continuous integration",
    "i2c",
    "gpio"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.22.0",
]

[project.urls]
Homepage = "https://github.com/dontsovcmc/metf-python-client"
Documentation = "https://github.com/dontsovcmc/metf-python-client#readme"
Repository = "https://github.com/dontsovcmc/metf-python-client"
Issues = "https://github.com/dontsovcmc/metf-python-client/issues"
Changelog = "https://github.com/dontsovcmc/metf-python-client/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[tool.setuptools]
packages = ["metf_python_client", "metf_python_client.boards", "metf_python_client.examples"]

[tool.setuptools.package-data]
metf_python_client = ["py.typed"]
